changes on CSS and code cleaning

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
+      <div class="heading">
+        <div class="title">Guess My Number!</div>
+        <div class="between">(Between 1 and 20)</div>
+      </div>
+
       <button class="btn again">Again!</button>
       <div class="number">?</div>
     </header>
